@@ -1,3 +1,4 @@
+221124 atari unreliability fixed
 221123 optimize atari
 221108 add tri-hashing
 221025 sokoban fixed
